<resources>
    <string name="app_name">Project(Final)</string>
    <string name="todo" />
    <string name="todo1">TODO</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="course">Course</string>
    <string name="backdroptrans">TODO</string>
    <string name="color_change">Color Change</string>
    <string name="profile_change">Profile Change</string>
    <string name="profile_facts">Profile Facts</string>
    <string name="backdroptransmenu">TODO</string>
    <string name="theme">Theme</string>
    <string name="settings">Settings</string>
    <string name="facts">Facts</string>
    <string name="enter_birth_date">Enter Birth Date</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_course">Enter Course</string>
    <string name="next">Next</string>
    <string name="enter_gender">Enter Gender</string>
    <string name="save">Save</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Other">Other</string>
    <string name="action_settings">Settings</string>
    <string name="namepage">TextView</string>
    <string name="agepage">agepage</string>
    <string name="coursepage">coursepage</string>
    <string name="birthdaypage">birthdaypage</string>
    <string name="genderpage">genderpage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_name_is_nuno">Your name is Nuno!</string>
    <string name="your_gender_is_male">Your Gender is: Male!</string>
    <string name="your_birth_date_is_28_04_2001">Your birth date is: 28/04/2001!</string>
    <string name="you_are_enrolled_in_lmac_what_a_shame">You are enrolled in: LMAC! What a shame...</string>
    <string name="changeage">Your age is: 20!</string>
</resources>