<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="411dp"
        android:layout_height="223dp"
        android:contentDescription="@string/backdroptransmenu"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/trans_backdrop" />

    <Button
        android:id="@+id/colorchange"
        android:layout_width="130sp"
        android:layout_height="70sp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="135dp"
        android:fontFamily="sans-serif-medium"

        android:lineSpacingExtra="5sp"
        android:text="@string/theme"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/profilechange"
        android:layout_width="130sp"
        android:layout_height="70sp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="135dp"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="5sp"
        android:text="@string/settings"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorchange" />

    <Button
        android:id="@+id/profilefacts"
        android:layout_width="130sp"
        android:layout_height="70sp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="132dp"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="5sp"
        android:text="@string/facts"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilechange" />

    <Button
        android:id="@+id/apimania"
        android:layout_width="130sp"
        android:layout_height="70sp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="132dp"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="5sp"
        android:text="API"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilefacts" />

    <ImageView
        android:id="@+id/backgroundmenu"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>