<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SharedPreferences">

    <ImageView
        android:id="@+id/settingsmenu"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <EditText
        android:id="@+id/nameidset"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#918E8E"
        android:textColorLink="#000000"
        android:textStyle="bold"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ageidset"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/enter_age"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#918E8E"
        android:textColorLink="#000000"
        android:textStyle="bold"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameidset" />

    <EditText
        android:id="@+id/birthdayidset"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="100dp"
        android:clickable="true"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:fontFamily="sans-serif-light"
        android:hint="@string/enter_birth_date"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#918E8E"
        android:textColorLink="#000000"
        android:textStyle="bold"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseidset" />

    <EditText
        android:id="@+id/courseidset"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/enter_course"
        android:inputType="textCapCharacters"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#918E8E"
        android:textColorLink="#000000"
        android:textStyle="bold"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageidset" />

    <EditText
        android:id="@+id/genderidset"
        android:clickable="true"
        android:focusableInTouchMode="false"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/enter_gender"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#918E8E"
        android:textColorLink="#000000"
        android:textStyle="bold"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthdayidset" />

    <Button
        android:id="@+id/bt_saveset"
        android:layout_width="115dp"
        android:layout_height="80dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="148dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderidset" />


</androidx.constraintlayout.widget.ConstraintLayout>

